--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h4{
 .work-inquiry {
     width: 1200px;
     height: 300px;
-    background-image: url(images/Group_33094_1.png);
+    background-image: url(IMAGES/Group_33094_1.png);
     background-size: 100%;
     margin: 0 auto;
     background-repeat: no-repeat;
